--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -10,7 +10,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
   height: 100%;
-  background-color: #f7f8fa;
+  background-color: rgba(255, 255, 255, 1);
   color: #323233;
   font-size: 14px;
 }
