--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -10,11 +10,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: #fff;
   color: #323233;
   font-size: 14px;
 }
-
+.pageContent{
+  padding:20px 15px 0px 15px;
+}
 /* 修复底部安全区域 */
 .safe-area-bottom {
   padding-bottom: constant(safe-area-inset-bottom);
